# GigaVFX

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  resources.md  vcpkg.json
data/: monkey.glb
shaders/: atmosphere.hlsli  bitangent_noise.hlsli  color.hlsli  depth_prepass.hlsl  forward.hlsl  gpu_particle_composite.hlsl  gpu_particles.hlsl  math.hlsli  mesh_disintegrate.hlsli  mesh_disintegrate2.hlsli  misc.hlsli  noise.hlsli  particle_emitters.hlsli  particle_helpers.hlsl  particle_indirect_dispatch.hlsl  particle_indirect_draw.hlsl  particle_render.hlsl  particle_simple.hlsli  particle_simple2.hlsli  particle_template.hlsl  particles.hlsl  pbr.hlsli  pcss.hlsli  procedural_sky.hlsl  random.hlsli  sdf_test.hlsl  shadowmap.hlsl  shared.h  simplex_noise.hlsli  surface_flow.hlsl  test_acceleration_structure.hlsl  tonemap.hlsl  trail_blazer.hlsl  trail_blazer_child.hlsl  triangle.hlsl
src/: buffer.h  camera.h  cgltf.h  colors.h  defines.h  gltf.cpp  gltf.h  gmath.cpp  gmath.h  gpu_particles.cpp  gpu_particles.h  graphics_context.cpp  graphics_context.h  hot_reload.cpp  hot_reload.h  log.h  main.cpp  mesh.h  misc.h  particle_system.cpp  particle_system.h  pipeline.cpp  pipeline.h  radix_sort.cpp  radix_sort.h  random.h  sdf.cpp  sdf.h  shaders.cpp  shaders.h  spirv_reflect.h  texture.cpp  texture.h  texture_catalog.cpp  texture_catalog.h  timer.cpp  timer.h  vk_helpers.h
src/imgui/: imgui_impl_vulkan.h
